# NextBrainBase

./: .gitignore  CMakeLists.txt  NextBrainBase.cpp
Common/: GUID.h  LogClass.h  Pos.h  Pose.h  RobotPointData.h  TopoDS_Shape.h
DeviceBase/: CMakeLists.txt  DeviceBase.h  DeviceInfo.h  DeviceInterface.h  DeviceJoint.h  DeviceParam.h  DeviceShape.h
Dummy/: CMakeLists.txt  DummyBase.h  DummyInfo.h  DummyInterface.h  DummyParam.h
DummyBase/: CMakeLists.txt  DummyBase.h  DummyParam.h  InterfaceClass.h  ParamClass.h
ObjectBase/: CMakeLists.txt  ObjectBase.h  ObjectInfo.h  ObjectInterface.h  ObjectParam.h  ObjectShape.h
RobotArmBase/: CMakeLists.txt  RobotArmBase.h  RobotArmBaseCMD.h  RobotArmBaseFunc.h  RobotArmBaseIO.h  RobotArmBaseInfo.h  RobotArmBaseInterface.h  RobotArmBaseKinematic.h  RobotArmBaseParam.h  RobotArmBaseProgram.h  RobotArmBaseShape.h
SA/SA_0001_RoboticsMathBasic/: CMakeLists.txt  RoboticsMathBasic.h
SO/SO_0001_DummyBase/: DummyBase.cpp  DummyBase.h  InterfaceClass.h  ParamClass.h
SO/SO_0002_ObjectBase/: CMakeLists.txt  ObjectBase.h  ObjectShape.h
SO/SO_0003_DeviceBase/: CMakeLists.txt  DeviceBase.h  DeviceJoint.h  DeviceShape.h
SO/SO_0004_RobotArmBase/: CMakeLists.txt  RobotArmBase.cpp  RobotArmBase.h  RobotArmBaseCMD.h  RobotArmBaseFunc.h  RobotArmBaseIO.h  RobotArmBaseKinematic.h  RobotArmBaseProgram.h  RobotArmBaseShape.h
